--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
 
             <div class="footerclass">
                 <div class="Companylogo">
-                    <img src="assets/asset 13.svg" alt="">
-                    <img src="assets/asset 14.svg" alt="">
-                    <img src="assets/asset 15.svg" alt="">
-                    <img src="assets/asset 16.svg" alt="">
-                    <img src="assets/asset 17.svg" alt="">
+                    <img src="asset 13.svg" alt="">
+                    <img src="asset 14.svg" alt="">
+                    <img src="asset 15.svg" alt="">
+                    <img src="asset 16.svg" alt="">
+                    <img src="asset 17.svg" alt="">
                 </div>
                 <div>
                     <h4>Product</h4>
